add agent count and pie chart to dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -245,6 +245,10 @@ nav .navbar-nav li a:hover {
 	background-color: #f09918;
 }
 
+.dashboard-bckg-3 {
+	background-color: #CD5CFF;
+}
+
 .dashboard-bckg-1-1 {
 	background-color: #764c5e;
 }
