make pie chart 3d

--- a/app/views/application/dashboard.html.erb
+++ b/app/views/application/dashboard.html.erb
@@ -104,8 +104,8 @@
 							                 //'title' : 'My Chart',
 							                 //legend : { position : 'bottom' }
 							            		// pieSliceText: 'value'
+							            		is3D : true
 							                 };
-							
 							
 							  // Display the chart inside the <div> element with id="piechart"
 							  var chart = new google.visualization.PieChart(document.getElementById('piechart'));
