--- a/app/views/prospects/_edit_cps.html.erb
+++ b/app/views/prospects/_edit_cps.html.erb
@@ -2,6 +2,7 @@
           <div class="col-md-4">
         		<%= f.input :cps_status, collection: [
   			  																			'Intro Presentation Scheduled',
+ 			  																			  'Scheduling SME Presentation',
   			  																			'SME Presentation Scheduled',
   			  																			'Waiting for Supplier Data',
   			  																			'Supplier Match Presentation Scheduled',
