fix static pages and dash

--- a/app/views/application/dashboard.html.erb
+++ b/app/views/application/dashboard.html.erb
@@ -30,7 +30,7 @@
 
 				<div class="col-md-4">
 					<div class="well dashboard-panel dashboard-bckg-3-2">
-						<h3 align="center">Total Agents Per Manager</h3>
+						<h3 align="center">Agents Per Manager</h3>
 						<h4>
 							<table align="center">
 								<tr>
@@ -98,13 +98,22 @@
 							]);
 							
 							  // Optional; add a title and set the width and height of the chart
-							  var options = {backgroundColor: 'transparent',
-							                 'width':400,
-							                 'height':250,
-							                 //'title' : 'My Chart',
-							                 //legend : { position : 'bottom' }
+							  var options = {
+							  							backgroundColor: 'transparent',
+							  							is3D : true,
+							                width:'100%',
+							                height:'100%',
+							                // title : 'My Chart',
+							                // legend : { position : 'bottom' },
+							                // legend: 'none',							                
 							            		// pieSliceText: 'value'
-							            		is3D : true
+											        // colors: ['#0598d8', '#f97263'],
+											        chartArea: {
+															            left: "3%",
+															            top: "3%",
+															            height: "94%",
+															            width: "94%"
+											        						}
 							                 };
 							
 							  // Display the chart inside the <div> element with id="piechart"
