--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -34,10 +34,10 @@
                   <i class="glyphicon glyphicon-education"></i> Resources
                 </a>
                 <div class="dropdown-menu navbar-select" aria-labelledby="navbarDropdown">
-                  <p><%= link_to "Training Videos", cps_training_vids_path %></p>
-                  <p><%= link_to "Steps to Sale", cps_steps_to_sale_path %></p>
-                  <p><%= link_to "Q & A", cps_answers_path %></p>
-                  <p><%= link_to "Marketing", marketing_path %></p>                  
+                  <p>&nbsp; <%= link_to "Training Videos", training_path %></p>
+                  <p>&nbsp; <%= link_to "Steps to Sale", steps_to_sale_path %></p>
+                  <p>&nbsp; <%= link_to "FAQs", faqs_path %></p>
+                  <p>&nbsp; <%= link_to "Marketing", marketing_path %></p>                  
                   <!--<p><%#= link_to "Commercial Payments", commercial_payments_path %></p>-->
                   <!--<p><%#= link_to "Instant Pay", instant_pay_path %></p>-->
                   <!--<p><%#= link_to "HealthCare Savings", healthcare_savings_path %></p>-->
