--- a/app/views/pages/faqs.html.erb
+++ b/app/views/pages/faqs.html.erb
@@ -2,17 +2,24 @@
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <p><em>Updated on 7/24/19 - Watch for updates</em></p>    
+      <p><em>Updated on 8/15/19 - Watch for updates</em></p>
+      <p>&nbsp;</p>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h3>Commercial Payments Solutions (Virtual Card Payments) Q & A</h3>
+      <h4><strong>Frequently Asked Questions</strong></h3>
       <p>&nbsp;</p>
+
+       <p><strong><font color="#333333" face="Helvetica, sans-serif">Which organizations qualify for the Priority Commercial Payments program?</font></strong><br></p>
+      
+      <p><font color="#333333" face="Helvetica, sans-serif">Any organization that has over $10M+ annually in Accounts Payable.  There is no maximum.</font><br>
+      <br></p>
+      
        <p><strong><font color="#333333" face="Helvetica, sans-serif">Might my suppliers raise my prices to cover the credit card processing fee?</font></strong><br></p>
       
-      <p><font color="#333333" face="Helvetica, sans-serif">Not very likely. If the suppliers have that intention they will tell the enrollment specialist that they intend to include a surcharge in return for acceptance. At that point, the enrollment specialist will notate the lead and mark this as Lost. This happens approximately 5% of the time. We find that those that enroll for acceptance do so openly and without deception. With that said, there are times that suppliers will rescind their enrollment at a later date due to cost concerns.</font><br>
+      <p><font color="#333333" face="Helvetica, sans-serif">Not very likely. If the suppliers have that intention they will tell the enrollment specialist that they intend to include a surcharge in return for acceptance. At that point, the enrollment specialist will notate the lead and mark this as Lost. This happens approximately 5% of the time.  With that said, there are times that suppliers will rescind their enrollment at a later date due to cost concerns.</font><br>
       <br></p>
       
       <p><strong><font color="#333333" face="Helvetica, sans-serif">What is the difference between Standard Interchange vs. Non-Standard Interchange?</font></strong><br></p>
@@ -53,8 +60,7 @@
       <p><font color="#333333" face="Helvetica, sans-serif">For those suppliers targeted that decline accepting card as a form of payment, Priority will offer an alternative solution with reduced cost while still providing automation. This comes in the form of their ACH+ (flat fee) or Dynamic Discounting solutions. This can provide incremental acceptance between 10%-20%.</font><br>
       <br></p>
       
-      <p><strong><font color="#333333" face="Helvetica, sans-serif">What if a vendor isn’t able to take credit cards?</font></strong><br>
-      <br></p>
+      <p><strong><font color="#333333" face="Helvetica, sans-serif">What if a vendor isn’t able to take credit cards?</font></strong></p>
       
       <p><font color="#333333" face="Helvetica, sans-serif">For your suppliers that do not currently have the ability to process credit card transactions, as one of the largest merchant acquirers in the U.S., Priority has the ability to set them up to accept Card as a form of payment. They can do so with the traditional Virtual Card solution or establish the supplier as a Buyer Initiated Payments (BIP) acceptor. The BIP process bring added automation to the Buyer by allowing Priority to process the transaction on their behalf and then forwarding the remittance advice for settlement.</font></p>
       
