--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,19 @@
 <div class="container pages">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <em>Updated on 7/25/19 - Watch for updates</em> 
+      <p><em>Updated on 8/15/19 - Watch for updates</em></p>
+      <p>&nbsp;</p>
     </div>
   </div>
   
   <div class="row">
     <div class="col-md-5 col-md-offset-1">
-      <h3>My Manager</h3>
+      <h4><strong>My Manager</strong></h4>
       <%= render html: my_manager.html_safe %>
     </div>
     
     <div class="col-md-5">
-      <h3>Accounts Payable Campaign Parameters</h3>
+      <h4><strong>Accounts Payable Campaign Parameters</strong></h4>
       <strong>$10M Minimum AP Spend</strong>  Target C-level & Director level Finance Execs (CFO, Controller, AP Director, etc.) at organizations with $50M+ in Revenue or 200+ Employees.
     </div>
   </div>
@@ -21,14 +22,14 @@
       
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h3>Two Sentence Elevator Pitch</h3>
+      <h4><strong>Two Sentence Elevator Pitch</strong></h4>
       <p>We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file.  Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.</p>
-      <p>&nbsp;</p>
-      
-      <p><strong>If scheduling with someone that you know… you might say the following…</strong> "I'm working with a large publicly traded commercial payments provider that's helping organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file. Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.  I'd love to setup a quick call with you and one of the AP experts to share how they do this, and we can hop on a screenshare.  Will you be available (day) at (time)?"</p>
 
-      <p><strong>Or shorter version…</strong> "I'm working with a large publicly traded commercial payments provider that's helping organizations reduce their Accounts Payable operating costs and generate revenue back to their company every time they make a payment to their suppliers.  I'd love to setup a quick call with you and one of the AP experts to share how they do this, and we can hop on a screenshare.  Will you be available (day) at (time)?"</p>
-
+      <ul>
+        <p><strong>If scheduling with someone that you know… you might say the following…</strong> "I'm working with a large publicly traded commercial payments provider that's helping organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file. Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.  I'd love to setup a quick call with you and one of the AP experts to share how they do this, and we can hop on a screenshare.  Will you be available (day) at (time)?"</p>
+    
+        <p><strong>Or shorter version…</strong> "I'm working with a large publicly traded commercial payments provider that's helping organizations reduce their Accounts Payable operating costs and generate revenue back to their company every time they make a payment to their suppliers.  I'd love to setup a quick call with you and one of the AP experts to share how they do this, and we can hop on a screenshare.  Will you be available (day) at (time)?"</p>
+      </ul>
     </div>
   </div>
 
@@ -37,14 +38,14 @@
   <div class="row">
     <div class="col-md-5 col-md-offset-1">
 
-      <h3>Sales Tools</h3>
+      <h4><strong>Sales Tools</strong></h3>
       <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
       <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
       <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
     </div>
     
     <div class="col-md-5">
-      <h3>Schedule Presentation</h3>
+      <h4><strong>Schedule Presentation</strong></h4>
       Schedule a presentation for your client with an expert at Priority Commercial Payments:
         <%= render html: calendly_link.html_safe %>
     </div>
