--- a/app/views/pages/marketing.html.erb
+++ b/app/views/pages/marketing.html.erb
@@ -11,7 +11,7 @@
   <% if current_user.group == "cc" || current_user.user_code == "cc" %>
     <div class="row">
       <div class="col-md-5 col-md-offset-1">
-        <h3>Marketing Resources</h3>
+        <h4><strong>Marketing Resources</strong></h4>
         <ul>
           <li><a href="cps_phone_script">Zero Rejection Cold Call Script</a></li>
           <li><a href="cps_email_to_meetings">Send Email after Scheduling Meetings</a> (use with cold call script)</li>
@@ -19,7 +19,7 @@
         </ul>
       </div>
       <div class="col-md-5">
-        <h3>Marketing Tools</h3>
+        <h4><strong>Marketing Resources</strong></h4>
         <ul>
           <li><a href="https://linkedhelper.com">Automate LinkedIn Marketing w/LinkedIn Helper</a> <em>($15 per month)</em></li>
           <li><a href="https://pp.woodpecker.co/chris">Automate Cold Email Marketing w/Woodpecker</a> <em>(30 day free trial)</em></li>   
@@ -32,7 +32,7 @@
 
   <div class="row">
     <div class="col-md-8 col-md-offset-1">
-      <h3>Marketing Videos</h3>
+      <h4><strong>Marketing Videos</strong></h4>
     </div>
   </div>
 
