--- a/app/views/pages/steps_to_sale.html.erb
+++ b/app/views/pages/steps_to_sale.html.erb
@@ -1,18 +1,19 @@
 <div class="container pages">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <p><em>Updated on 7/24/19 - Watch for updates</em></p>    
+      <p><em>Updated on 7/24/19 - Watch for updates</em></p>
+      <p>&nbsp;</p>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
 
-      <h3>Steps to the Virtual Card Payment Sale</h3>
+      <h4><strong>Steps to the Virtual Card Payment Sale</strong></h3>
       <p>&nbsp;</p>
       
       <ol type="1">
-        <li>Build list of businesses that can benefit from Virtual Card Payments. These would typically be businesses with an annual revenue of over $100 Million, since we are looking for over $40 Million in accounts payable.<br>
+        <li>Build list of businesses that can benefit from Virtual Card Payments. These would typically be businesses with an annual revenue of over $100 Million, since idealy we are looking for organizations that have over $40 Million in accounts payable annually ($10M Minimum).<br>
           <br></li>
         <li>Contact CFOs, Controllers, AP Managers, etc. and either give an elevator pitch or use the high level intro presentation.<br>
         <br></li>
