--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<% if current_user.has_users? || current_user.manager %>
+
 <div class="col-md-8 col-md-offset-2">
 
 	<div class="panel panel-gray">
@@ -93,3 +95,5 @@
 		</div>        
 
   </div>
+
+<% end %>  
