welcome email with agreement

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -112,8 +112,15 @@
         
               <li>
                 <div align="justify">
-                  Governing Law, Jurisdiction, etc. This Agreement shall be governed by and construed in accordance with, the laws of the State of Georgia. Venue shall be the federal or state courts in Georgia.</div>
+                  Governing Law, Jurisdiction, etc. This Agreement shall be governed by and construed in accordance with, the laws of the State of Georgia. Venue shall be the federal or state courts in Georgia.</div><br>
               </li>
+              
+              <li>
+                <div align="justify">              
+                  The terms and conditions of this agreement are subject to change with 60 days notice.
+                </div>
+              </li>              
+              
             </ol>
           </li>
         </ol>
