--- a/app/views/notification_mailer/new_agent_welcome.html.erb
+++ b/app/views/notification_mailer/new_agent_welcome.html.erb
@@ -18,8 +18,8 @@
 <br>
 <strong>Aspire Partners</strong></p>
 
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>      
+<p>&nbsp;</p>
+<hr>   
 
         <p align="center"><strong>AGENT AGREEMENT</strong></p>
         
@@ -33,25 +33,25 @@
           <li>
             <div align="justify">
               Payment of Compensation. As compensation for Referred End Users, Aspire shall pay AGENT in accordance with the Compensation Addendum. Compensation is subject to change, with notice, due to market conditions such as: change in Visa MasterCard interchange rates and policies, and government regulations.&nbsp; Aspire shall provide AGENT with a monthly compensation report and Aspire shall pay AGENT each month, no more than 60 days after the month has ended.&nbsp; Compensation payable to AGENT shall be paid until the Referred End User stops utilizing the service(s).
-            </div><br>
+            </div>
           </li>
         
           <li>
             <div align="justify">
               Term and Termination.&nbsp;&nbsp; This Agreement shall commence and become effective on the Effective Date and shall continue for twenty-four (24) months (the “Initial Term”). The Initial Term shall automatically renew for an unlimited number of one (1) year renewal terms (each, a “Renewal Term”) unless one party provides the other with written notice of its intent to non-renew.&nbsp; Each Party shall have the right to terminate this Agreement at any time by giving thirty (30) days prior notice to the other Party.
-            </div><br>
+            </div>
           </li>
         
           <li>
             <div align="justify">
               Mutual Indemnity. Each Party shall indemnify, defend and hold harmless the other Party from and against all liabilities, costs and expenses (including reasonable attorneys’ fees) incurred by the Indemnified Party that arise out of any claim, demand, suit, action, or proceeding brought by a third party that involves, relates to or concerns a violation or other breach by the Indemnifying Party of any of the provisions of this Agreement, or the negligence or willful misconduct of the Indemnifying Party.
-            </div><br>
+            </div>
           </li>
         
           <li>
             <div align="justify">
               Confidentiality.&nbsp;&nbsp; AGENT shall hold the ASPIRE's business and trade secrets, including client lists, marketing and sales strategies, pricing, and other information that could be useful to a competitor, on in strict confidence.&nbsp; The Parties’ obligations set forth herein shall remain in effect during the Term of the Agreement and for five (5) years thereafter, but such obligation of confidentiality will not expire for Confidential Information considered or deemed to be a trade secret under applicable law.
-            </div><br>
+            </div>
           </li>
         
           <li>
@@ -62,25 +62,25 @@
               <li>
                 <div align="justify">
                   solicit, hire or otherwise cause any employee or independent contractor of Aspire to leave his or her employment or engagement with Aspire.
-                </div><br>
+                </div>
               </li>
         
               <li>
                 <div align="justify">
                   take any action to solicit, clients or customers of ASPIRE and its partners.
-                </div><br>
+                </div>
               </li>
         
               <li>
                 <div align="justify">
                   own, operate, or hold any position for a Competing Enterprise or engage in any activities for a Competing Enterprise as an employee, contractor, or consultant.
-                </div><br>
+                </div>
               </li>
         
               <li>
                 <div align="justify">
                   make, any statement or other communication to any third party which impugns or attacks, or is otherwise critical of, the reputation, business or character of Aspire or any of its affiliates, or any of its respective directors, officers, representatives, agents or employees.
-                </div><br>
+                </div>
               </li>
             </ol>
           </li>
@@ -88,7 +88,7 @@
           <li>
             <div align="justify">
               Breach.&nbsp; AGENT acknowledges that the unauthorized use or disclosure of confidential information, or that a breach of any of the restrictive covenants may cause Aspire irreparable harm that could not be compensated by monetary damages. Accordingly, AGENT agrees that Aspire will be entitled to seek injunctive and preliminary relief to remedy any actual or threatened unauthorized use or disclosure of such information, and/or to specific performance or any other equitable remedy available without the requirement of posting a bond or other security. Any such equitable relief shall be in addition to and not in lieu of any other relief to which Aspire may be entitled.&nbsp; In the event of breach, ASPIRE may be released from its obligations and liabilities under this agreement.
-            </div><br>
+            </div>
           </li>
         
           <li>
@@ -100,30 +100,30 @@
               <li>
                 <div align="justify">
                   Notices. Any and all notices, elections, offers, acceptances, and demands permitted or required to be made under this Agreement shall be in writing, and sent by registered or certified mail, to the other party. For ASPIRE address to HAC Enterprises LLC, 1001 Cambridge Square, Alpharetta, GA 30009, Attention: Alan Briskin.
-                </div><br>
+                </div>
               </li>
         
               <li>
                 <div align="justify">
                   Costs and Expenses. Unless otherwise provided in this Agreement, each Party shall bear all fees and expenses incurred in performing its obligations under this Agreement.
-                </div><br>
+                </div>
               </li>
         
               <li>
                 <div align="justify">
                   Independent Contractor. AGENT shall perform all work in connection with this Agreement as an independent contractor and not as an employee of Aspire.
-                </div><br>
+                </div>
               </li>
         
               <li>
                 <div align="justify">
                   Non-Exclusive. Nothing in this Agreement shall prohibit Aspire from engaging with other individuals, representatives, organizations, or entities, of any kind.
-                </div><br>
+                </div>
               </li>
         
               <li>
                 <div align="justify">
-                  Governing Law, Jurisdiction, etc. This Agreement shall be governed by and construed in accordance with, the laws of the State of Georgia. Venue shall be the federal or state courts in Georgia.</div><br>
+                  Governing Law, Jurisdiction, etc. This Agreement shall be governed by and construed in accordance with, the laws of the State of Georgia. Venue shall be the federal or state courts in Georgia.</div>
               </li>
               
               <li>
@@ -138,14 +138,11 @@
         
         <p align="justify">The parties acknowledge that by clicking "I Agree" the parties have executed this Agreement as of this day.</p>
 
-      </div>
-      <p>&nbsp;</p>
-
-
         <p align="center"><strong>EXHIBIT A&nbsp; - COMPENSATION ADDENDUM</strong></p>
         <p><strong>I.&nbsp;&nbsp; Commercial Payments</strong></p>
         <p align="justify">Aspire's Partner provides Commercial Payment Services that reduce an organizations AP operating expenses, saving them time and money, and generates revenue when paying their suppliers and vendors. Aspire shall pay AGENT a “Revenue Share” based on the aggregate volume of Referred End Users’ Accounts Payable spend through Virtual Card Payments.<br>
         <br>
         Standard Transactions are defined as Visa and MasterCard Corporate Standard or Corporate Data Rate I. For all Standard Transactions for End Users, Aspire shall pay AGENT a Revenue Share of .10% (10 BPS) for each such transaction where client is paid no more than 1.5% (150 BPS). This amount would be reduced in the event that a client is to be paid more than 1.5% (150 BPS).<br>
         <br>Non-Standard Transactions include, but are not limited to, Enhanced Data transactions, Large Ticket transactions, foreign transactions. For all transactions for End Users that do not qualify as Standard Transactions (“Non-Standard Transactions”), Aspire shall pay AGENT a Revenue Share of .05% (5 BPS) for each such transaction.</p>
-      </div>	  
+      
+      
