add manager info and notification to welcome email

--- a/app/views/application/dashboard.html.erb
+++ b/app/views/application/dashboard.html.erb
@@ -55,7 +55,7 @@
 									<td><%= @users.where(group: "rs").count %></td><td>&nbsp;&nbsp;&nbsp;</td><td>Robert Sawyer</td>
 								</tr>
 								<tr>									
-									<td><%= @users.where(group: "se").count %></td><td>&nbsp;&nbsp;&nbsp;</td><td>Stepanie Elad</td>
+									<td><%= @users.where(group: "se").count %></td><td>&nbsp;&nbsp;&nbsp;</td><td>Stephanie Elad</td>
 								</tr>
 								<tr>									
 									<td><%= @users.where(group: "td").count %></td><td>&nbsp;&nbsp;&nbsp;</td><td>Thomas DePaola</td>
