add manager info and notification to welcome email

--- a/app/views/notification_mailer/new_agent_welcome.html.erb
+++ b/app/views/notification_mailer/new_agent_welcome.html.erb
@@ -7,7 +7,7 @@
 Your Manager is:
 <ul>
    <% if @user.group == "cc" %>
-      Chris Cunningham<br>chris@aspirepartners.co<br>(800) 410-0233 Ext 500<br>Mobile (910) 528-1421'
+      Chris Cunningham<br>chris@aspirepartners.co<br>(800) 410-0233 Ext 500<br>Mobile (910) 528-1421
     <%elsif @user.group == "rs" %>
       Robert Sawyer<br>robert.sawyer@aspirepartners.co<br>(518) 424-8148
     <% elsif @user.group == "ne" %>
