welcome from manager email

--- a/app/views/notification_mailer/new_agent_welcome.html.erb
+++ b/app/views/notification_mailer/new_agent_welcome.html.erb
@@ -36,8 +36,8 @@ Your Manager is:
 <p>To get started, please:</p>
 
 <ol>
-  <li>Get back to your manager to discuss next steps to get started.<br><br></li>
-  <li>Take a look around the resource center.<br><br></li>
+  <li>Follow-up with your manager to discuss next steps to get started.<br><br></li>
+  <li>Take a look around the resource center and review training videos.<br><br></li>
   <li>Register for the next training webinar and review previously recorded webinars.<br><br></li>
 </ol>
 
